--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header class="header">
+    <div class="conteiner header-conteiner">
     <nav class="navigation">
       <a class="logo link" href="/" lang="en">
         <span class="main-logo">Web</span>Studio
@@ -24,12 +28,14 @@
         <li class="nav-list-item"> <a class="nav-list link" href="">Контакты</a></li>
       </ul>
     </nav>
-    <ul class="list">
+    <ul class="contact list">
       <li> <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li> <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
+    </div>
   </header>
   <main>
+    <div class="conteiner">
     <section>
       <h2>Фильтр по примерам работ</h2>
     <ul class="list">
@@ -88,8 +94,10 @@
       </li>
     </ul>
     </section>
+    </div>
   </main>
 <footer>
+  <div class="conteiner">
   <a class="logo link" href="/" lang="en">
     <span class="main-logo">Web</span>Studio
   </a>
@@ -101,6 +109,7 @@
       <li><a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </address>
+  </div>
 </footer>
 </body>
 </html>
