--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header">
+        <div class="conteiner header-conteiner">
         <nav class="navigation">
             <a class="logo link"  href="/" lang="en">
                 <span class="main-logo">Web</span>Studio
@@ -22,19 +26,23 @@
                 <li class="nav-list-item"> <a class="nav-list link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="list">
-            <li> <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li> <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact list">
+            <li class="contact-list-item"> <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contact-list-item"> <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
     <main>
         <section class="hero">
+            <div class="conteiner"></div>
             <h1 class="main-title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button class="modal-btn" type="button">Заказать услугу</button>
+                </div>
         </section>
         <section class="benefits">
+            <div class="conteiner"></div>
             <h2>Наши преимущества</h2>
-            <ul class="list">
+            <ul class="benefits-list list">
                 <li>
                     <h3 class="subtitle">Внимание к деталям</h3>
                     <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -52,8 +60,10 @@
                     <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+            </div>
         </section>
         <section>
+            <div class="conteiner">
             <h2 class="title">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
@@ -66,8 +76,10 @@
                     <img src="./img/photo-3.jpg" alt="внешнее оформление" width="370" height="294">
                 </li>
             </ul>
+            </div>
         </section>
         <section>
+            <div class="conteiner">
             <h2 class="title">Наша команда</h2>
             <ul class="list">
                 <li>
@@ -95,9 +107,11 @@
                     <p class="text-team" lang="en">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <footer>
+        <div class="conteiner">
         <a class="logo link" href="/" lang="en">
             <span class="main-logo">Web</span>Studio
         </a>
@@ -109,6 +123,7 @@
                 <li><a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
