--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="conteiner header-conteiner">
+        <div class="conteiner section header-conteiner">
         <nav class="navigation">
             <a class="logo link"  href="/" lang="en">
                 <span class="main-logo">Web</span>Studio
@@ -34,13 +34,13 @@
     </header>
     <main>
         <section class="hero">
-            <div class="conteiner"></div>
+            <div class="conteiner section">
             <h1 class="main-title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button class="modal-btn" type="button">Заказать услугу</button>
                 </div>
         </section>
         <section class="benefits">
-            <div class="conteiner"></div>
+            <div class="conteiner section">
             <h2>Наши преимущества</h2>
             <ul class="benefits-list list">
                 <li>
@@ -63,7 +63,7 @@
             </div>
         </section>
         <section>
-            <div class="conteiner">
+            <div class="conteiner section">
             <h2 class="title">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
@@ -79,9 +79,9 @@
             </div>
         </section>
         <section>
-            <div class="conteiner">
+            <div class="conteiner section team">
             <h2 class="title">Наша команда</h2>
-            <ul class="list">
+            <ul class="team-list list">
                 <li>
                     <a class="link" href="/">
                         <img src="./img/igor.jpg" alt="фото Игоря" width="270" height="260"></a>
@@ -111,7 +111,7 @@
         </section>
     </main>
     <footer>
-        <div class="conteiner">
+        <div class="conteiner section">
         <a class="logo link" href="/" lang="en">
             <span class="main-logo">Web</span>Studio
         </a>
