--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
         <section>
             <div class="conteiner section">
             <h2 class="title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li>
+            <ul class="field list">
+                <li class="field-item">
                     <img src="./img/photo-1.jpg" alt="верстка" width="370" height="294">
                 </li>
-                <li>
+                <li class="field-item">
                     <img src="./img/photo-2.jpg" alt="дизайн" width="370" height="294">
                 </li>
-                <li>
+                <li class="field-item">
                     <img src="./img/photo-3.jpg" alt="внешнее оформление" width="370" height="294">
                 </li>
             </ul>
@@ -82,29 +82,37 @@
             <div class="conteiner section team">
             <h2 class="title">Наша команда</h2>
             <ul class="team-list list">
-                <li>
+                <li class="team-items">
                     <a class="link" href="/">
                         <img src="./img/igor.jpg" alt="фото Игоря" width="270" height="260"></a>
+                    <div class="conteiner-team">
                     <h3 class="subtitle-team">Игорь Демьяненко</h3>
                     <p class="text-team" lang="en">Product Designer</p>
+                    </div>
                 </li>
-                <li>
+                <li class="team-items">
                     <a class="link" href="/">
                         <img src="./img/olga.jpg" alt="фото ольга" width="270" height="260"></a>
-                    <h3 class="subtitle-team">Ольга Репина</h3>
-                    <p class="text-team" lang="en">Frontend Developer</p>
+                    <div class="conteiner-team">
+                        <h3 class="subtitle-team">Ольга Репина</h3>
+                        <p class="text-team" lang="en">Frontend Developer</p>
+                    </div>
                 </li>
-                <li>
+                <li class="team-items">
                     <a class="link" href="/">
                         <img src="./img/nikolai.jpg" alt="фото Николай" width="270" height="260"></a>
-                    <h3 class="subtitle-team">Николай Тарасов</h3>
+                    <div class="conteiner-team">
+                        <h3 class="subtitle-team">Николай Тарасов</h3>
                     <p class="text-team" lang="en">Marketing</p>
+                    </div>
                 </li>
-                <li>
+                <li class="team-items">
                     <a class="link" href="/">
                         <img src="./img/mihail.jpg" alt="фото Михаил" width="270" height="260"></a>
+                    <div class="conteiner-team">
                     <h3 class="subtitle-team">Михаил Ермаков</h3>
                     <p class="text-team" lang="en">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
