--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
             <div class="conteiner section">
             <h1 class="main-title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button class="modal-btn" type="button">Заказать услугу</button>
-                </div>
+            </div>
         </section>
         <section class="benefits">
             <div class="conteiner section">
             <h2>Наши преимущества</h2>
             <ul class="benefits-list list">
-                <li>
+                <li class="benefits-items">
                     <h3 class="subtitle">Внимание к деталям</h3>
                     <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
+                <li class="benefits-items">
                     <h3 class="subtitle">Пунктуальность</h3>
                     <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
+                <li class="benefits-items">
                     <h3 class="subtitle">Планирование</h3>
                     <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
+                <li class="benefits-items">
                     <h3 class="subtitle">Современные технологии</h3>
                     <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
