--- a/portfolio.html
+++ b/portfolio.html
@@ -29,72 +29,74 @@
       </ul>
     </nav>
     <ul class="contact list">
-      <li> <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li> <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <li class="contact-list-item"> <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="contact-list-item"> <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
     </div>
   </header>
   <main>
-    <div class="conteiner">
     <section>
+    <div class="conteiner">
       <h2>Фильтр по примерам работ</h2>
-    <ul class="list">
-     <li><button class="filter-btn" type="button">Все</button></li>
-     <li> <button class="filter-btn" type="button">Веб сайты</button> </li>
-     <li> <button class="filter-btn" type="button">Приложения</button> </li>
-     <li> <button class="filter-btn" type="button">Дизайн</button> </li>
-     <li> <button class="filter-btn" type="button">Маркетинг</button> </li>
+    <ul class="filter list">
+     <li class="filter-items"><button class="filter-btn" type="button">Все</button></li>
+     <li class="filter-items"> <button class="filter-btn" type="button">Веб сайты</button> </li>
+     <li class="filter-items"> <button class="filter-btn" type="button">Приложения</button> </li>
+     <li class="filter-items"> <button class="filter-btn" type="button">Дизайн</button> </li>
+     <li class="filter-items"> <button class="filter-btn" type="button">Маркетинг</button> </li>
     </ul>
+    </div>
       <h2>Примеры работ</h2>
-    <ul class="list">
-      <li>
+      <div class="conteiner">
+    <ul class="example-work list">
+      <li class="example-work-items">
         <img src="./img/website.jpg" alt="веб сайт" width="370" height="294">
         <h3 class="secondary-subtitle">Технокряк</h3>
         <p class="secondary-text">Веб-сайт</p>
       </li>
-      <li>
+      <li class="example-work-items">
         <img src="./img/design.jpg" alt="дизайн" width="370" height="294">
         <h3 class="secondary-subtitle">Постер New Orlean vs Golden Star</h3>
         <p class="secondary-text">Дизайн</p>
       </li>
-      <li>
+      <li class="example-work-items">
         <img src="./img/application.jpg" alt="приложение" width="370" height="294">
         <h3 class="secondary-subtitle">Ресторан Seafood</h3>
         <p class="secondary-text">Приложение</p>
       </li>
-      <li>
+      <li class="example-work-items">
         <img src="./img/marketing.jpg" alt="маркетинг" width="370" height="294">
         <h3 class="secondary-subtitle">Проект Prime</h3>
         <p class="secondary-text">Маркетинг</p>
       </li>
-      <li>
+      <li class="example-work-items">
         <img src="./img/addition.jpg" alt="приложение" width="370" height="294">
         <h3 class="secondary-subtitle">Проект Boxes</h3>
         <p class="secondary-text">Приложение</p>
       </li>
-      <li>
+      <li class="example-work-items">
         <img src="./img/website2.jpg" alt="веб сайт" width="370" height="294">
         <h3 class="secondary-subtitle" lang="en">Inspiration has no Borders</h3>
         <p class="secondary-text">Веб-сайт</p>
       </li>
-      <li>
+      <li class="example-work-items">
         <img src="./img/design2.jpg" alt="дизайн" width="370" height="294">
         <h3 class="secondary-subtitle">Видання Limited Edition</h3>
         <p class="secondary-text">Дизайн</p>
       </li>
-      <li>
+      <li class="example-work-items">
         <img src="./img/marketing2.jpg" alt="маркетинг" width="370" height="294">
         <h3 class="secondary-subtitle">Проект LAB</h3>
         <p class="secondary-text">Маркетинг</p>
       </li>
-      <li>
+      <li class="example-work-items">
         <img src="./img/addition2.jpg" alt="приложение" width="370" height="294">
         <h3 class="secondary-subtitle" lang="en">Growing Business</h3>
         <p class="secondary-text">Приложение</p>
       </li>
     </ul>
-    </section>
     </div>
+    </section>
   </main>
 <footer>
   <div class="conteiner">
