--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             </ul>
             </div>
         </section>
-        <section>
-            <div class="conteiner section team">
+        <section class="team-section">
+            <div class="conteiner section">
             <h2 class="title">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-items">
@@ -119,15 +119,15 @@
         </section>
     </main>
     <footer>
-        <div class="conteiner section">
-        <a class="logo link" href="/" lang="en">
+        <div class="conteiner conteiner-footer section">
+        <a class="logo footer-logo link" href="/" lang="en">
             <span class="main-logo">Web</span>Studio
         </a>
         <address>
             <ul class="list">
-                <li><a class="address link" href="https://goo.gl/maps/7iSsdwD6weHtM2xa7" 
+                <li class="footer-address"><a class="address link" href="https://goo.gl/maps/7iSsdwD6weHtM2xa7" 
                     target="blank" rel="noopener noreferrer">г. Киев,пр-т Леси Украинки, 26</a></li>
-                <li><a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="footer-contact"><a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
