--- a/portfolio.html
+++ b/portfolio.html
@@ -51,63 +51,81 @@
     <ul class="example-work list">
       <li class="example-work-items">
         <img src="./img/website.jpg" alt="веб сайт" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle">Технокряк</h3>
         <p class="secondary-text">Веб-сайт</p>
+        </div>
       </li>
       <li class="example-work-items">
         <img src="./img/design.jpg" alt="дизайн" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle">Постер New Orlean vs Golden Star</h3>
         <p class="secondary-text">Дизайн</p>
+        </div>
       </li>
       <li class="example-work-items">
         <img src="./img/application.jpg" alt="приложение" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle">Ресторан Seafood</h3>
         <p class="secondary-text">Приложение</p>
+        </div>
       </li>
       <li class="example-work-items">
         <img src="./img/marketing.jpg" alt="маркетинг" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle">Проект Prime</h3>
         <p class="secondary-text">Маркетинг</p>
+        </div>
       </li>
       <li class="example-work-items">
         <img src="./img/addition.jpg" alt="приложение" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle">Проект Boxes</h3>
         <p class="secondary-text">Приложение</p>
+        </div>
       </li>
       <li class="example-work-items">
         <img src="./img/website2.jpg" alt="веб сайт" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle" lang="en">Inspiration has no Borders</h3>
         <p class="secondary-text">Веб-сайт</p>
+        </div>
       </li>
       <li class="example-work-items">
         <img src="./img/design2.jpg" alt="дизайн" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle">Видання Limited Edition</h3>
         <p class="secondary-text">Дизайн</p>
+        </div>
       </li>
       <li class="example-work-items">
         <img src="./img/marketing2.jpg" alt="маркетинг" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle">Проект LAB</h3>
         <p class="secondary-text">Маркетинг</p>
+        </div>
       </li>
       <li class="example-work-items">
         <img src="./img/addition2.jpg" alt="приложение" width="370" height="294">
+        <div class="conteiner-example">
         <h3 class="secondary-subtitle" lang="en">Growing Business</h3>
         <p class="secondary-text">Приложение</p>
+        </div>
       </li>
     </ul>
     </div>
     </section>
   </main>
 <footer>
-  <div class="conteiner">
-  <a class="logo link" href="/" lang="en">
+  <div class="conteiner conteiner-footer section">
+  <a class="logo logo-footer link" href="/" lang="en">
     <span class="main-logo">Web</span>Studio
   </a>
   <address>
     <ul class="list">
-      <li><a class="address link" href="https://goo.gl/maps/7iSsdwD6weHtM2xa7" target="blank"
+      <li class="footer-address"><a class="address link" href="https://goo.gl/maps/7iSsdwD6weHtM2xa7" target="blank"
           rel="noopener noreferrer">г. Киев,пр-т Леси Украинки, 26</a></li>
-      <li><a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="footer-contact"><a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </address>
