--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="conteiner section header-conteiner">
+        <div class="conteiner header-conteiner">
         <nav class="navigation">
             <a class="logo link"  href="/" lang="en">
                 <span class="main-logo">Web</span>Studio
