--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         <li class="nav-list-item"> <a class="nav-list link" href="">Контакты</a></li>
       </ul>
     </nav>
-    <ul class="contact list">
+    <ul class="contact contact-list list">
       <li class="contact-list-item"> <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li class="contact-list-item"> <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
