--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     </header>
     <main>
         <section class="hero">
-            <div class="conteiner section">
+            <div class="conteiner">
             <h1 class="main-title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button class="modal-btn" type="button">Заказать услугу</button>
             </div>
         </section>
-        <section class="benefits">
-            <div class="conteiner section">
+        <section class="benefits section">
+            <div class="conteiner">
             <h2>Наши преимущества</h2>
             <ul class="benefits-list list">
                 <li class="benefits-items">
@@ -62,8 +62,8 @@
             </ul>
             </div>
         </section>
-        <section>
-            <div class="conteiner section">
+        <section class="section">
+            <div class="conteiner">
             <h2 class="title">Чем мы занимаемся</h2>
             <ul class="field list">
                 <li class="field-item">
@@ -78,8 +78,8 @@
             </ul>
             </div>
         </section>
-        <section class="team-section">
-            <div class="conteiner section">
+        <section class="team-section section">
+            <div class="conteiner">
             <h2 class="title">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-items">
