--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <main>
         <section class="hero">
             <div class="conteiner">
-            <h1 class="main-title">Эффективные решения <br> для вашего бизнеса</h1>
+            <h1 class="main-title">Эффективные решения<br>для вашего бизнеса</h1>
                 <button class="modal-btn" type="button">Заказать услугу</button>
             </div>
         </section>
         <section class="benefits section">
             <div class="conteiner">
-            <h2>Наши преимущества</h2>
+            <h2 style="display: none;">Наши преимущества</h2>
             <ul class="benefits-list list">
                 <li class="benefits-items">
                     <h3 class="subtitle">Внимание к деталям</h3>
@@ -62,7 +62,7 @@
             </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section field-section">
             <div class="conteiner">
             <h2 class="title">Чем мы занимаемся</h2>
             <ul class="field list">
@@ -118,8 +118,8 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="conteiner conteiner-footer section">
+    <footer class="section section-footer">
+        <div class="conteiner conteiner-footer">
         <a class="logo footer-logo link" href="/" lang="en">
             <span class="main-logo">Web</span>Studio
         </a>
