--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
   <main>
     <section>
     <div class="conteiner">
-      <h2>Фильтр по примерам работ</h2>
+      <h2 style="display: none;">Фильтр по примерам работ</h2>
     <ul class="filter list">
      <li class="filter-items"><button class="filter-btn" type="button">Все</button></li>
      <li class="filter-items"> <button class="filter-btn" type="button">Веб сайты</button> </li>
@@ -46,7 +46,7 @@
      <li class="filter-items"> <button class="filter-btn" type="button">Маркетинг</button> </li>
     </ul>
     </div>
-      <h2>Примеры работ</h2>
+      <h2 style="display: none;">Примеры работ</h2>
       <div class="conteiner">
     <ul class="example-work list">
       <li class="example-work-items">
