--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     </div>
   </header>
   <main>
-    <section>
+    <section class="section">
     <div class="conteiner">
       <h2 style="display: none;">Фильтр по примерам работ</h2>
     <ul class="filter list">
@@ -117,8 +117,8 @@
     </section>
   </main>
 <footer>
-  <div class="conteiner conteiner-footer section">
-  <a class="logo logo-footer link" href="/" lang="en">
+  <div class="conteiner conteiner-footer">
+  <a class="footer-logo link" href="/" lang="en">
     <span class="main-logo">Web</span>Studio
   </a>
   <address>
