--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <section class="hero">
             <div class="conteiner">
-            <h1 class="main-title">Эффективные решения<br>для вашего бизнеса</h1>
+            <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="modal-btn" type="button">Заказать услугу</button>
             </div>
         </section>
@@ -118,9 +118,9 @@
             </div>
         </section>
     </main>
-    <footer class="section section-footer">
+    <footer class="section-footer">
         <div class="conteiner conteiner-footer">
-        <a class="logo footer-logo link" href="/" lang="en">
+        <a class="footer-logo link" href="/" lang="en">
             <span class="main-logo">Web</span>Studio
         </a>
         <address>
